added plots to appendix and updated output tables

--- a/texFiles/2.1_1_membership_redshift.tex
+++ b/texFiles/2.1_1_membership_redshift.tex
@@ -1,18 +1,18 @@
 % \textbf{how do we determine the overall membership}
-% relevant info of the membership is in M11 table 1
+% relevant info of the membership is in M12 table 1
 % cannot determine the membership of two galaxies 
-% spatial cut is defined in M11 p.9 first paragraph 
+% spatial cut is defined in M12 p.9 first paragraph 
 
 % paragraphs needs to be reorganized 
 We adopt the identification of galaxy membership of El Gordo given by
-\citepalias{M11} with a total count of 89 galaxies.
+\citepalias{M12} with a total count of 89 galaxies.
 %The overall membership of the galaxies
 %of El Gordo was first determined using a shifting gapper method
 %\citep{Fadda96} after applying a rest frame cut of
 %4000~\kilo\meter~\second$^{-1}$ \citep{Sifon13}. This method gives a
 To further distinguish member galaxies of each subcluster, we adopt a
 redshift cut of $z < 0.886$, and a spatial cut approximately perpendicular
-to the 2D merger axis from \citetalias{M11} to determine that
+to the 2D merger axis from \citetalias{M12} to determine that
 there are 51 members in the NW subclusters and 35 members in the SE subclusters (See Figure
 \ref{fig:membership}). 
 The spatial cut indicated by the green line was done after
@@ -33,10 +33,11 @@ respectively \citep{Beers90}.
 %These biweight location estimators are less susceptible to outliers than
 %the mean and standard deviations. 
 Both the estimated redshifts of the subclusters and the uncertainties are
-consistent with estimates given by \citealt{Sifon13}, and the fact that El
+consistent with estimates given by \citealt{Sifon13}, and the fact that the
+member galaxies of El
 Gordo shows large velocity dispersion and has the largest velocity
 dispersion among all the ACT galaxy clusters as reported by
-\citetalias{M13}. These redshifts of the subclusters correspond to a
+\citetalias{M12}. These redshifts of the subclusters correspond to a
 radial velocity difference in the frame of the NW subcluster
 to be $476 \pm 242 $ km/s. We estimate the radial velocity differences of the
 subclusters by first calculating the velocity of each subcluster with
@@ -51,7 +52,7 @@ by:
 \end{equation}
 This result is lower than the the quoted radial velocity differences of
 $586$
-km/s reported by \citetalias{M11} from the approximation of $\Delta v_{rad}
+km/s reported by \citetalias{M12} from the approximation of $\Delta v_{rad}
 = c(z_1 - z_2) / (1 + z_1)$ in the frame of the NW subcluster. 
 
 
