--- a/texFiles/2.2_0_monte_carlo_outputs.tex
+++ b/texFiles/2.2_0_monte_carlo_outputs.tex
@@ -5,11 +5,11 @@ of the most interest include the time dependence and $\alpha$, which is
 defined to be the projection angle between the plane of the sky and the merger axis. Other output variables are dependent on $\alpha$ and the time
 dependence. Specifically, the simulation denotes the time dependence by
 providing several characteristic time-scales, including the time
-elapsed between the collision and when the subclusters first reach apoapsis
-($T$) and the time-since-collision.  
+elapsed between the consecutive collisions
+($T$) and the time-since-collision of the observed state (TSC).  
 
-The two versions of the time-since-collision variables $TSC_0$ and
-$TSC_1$ denotes different possible merger scenarios. 1) We call the scenario for which the subclusters are
+We provide two versions of the time-since-collision variables $TSC_0$ and
+$TSC_1$ to denote different possible merger scenarios. 1) We call the scenario for which the subclusters are
 moving apart after collision to be ``outgoing" and it corresponds to the
 smaller $TSC_0$ value, and 2) we call the alternative scenario 
 ``returning" for which the subclusters are approaching each other after turning
@@ -23,7 +23,7 @@ collision ($v_{3D}(t_{col})$) and at the time of observation
 ($v_{3D}(t_{obs})$) are provided. The maximum 3D separation ($d_{max}$),
 which is defined to be the distance between the position of collision to
 the apoapsis, is also part of
-the outputs. (See the lower half of Table \ref{tab:outputs} for all the outputs).
+the outputs. (See Table \ref{tab:outputs} for all the outputs).
 %Here we present results based on:\\  %1) a flat radio prior\\
 %2) a uniform prior over a range of most likely 3D separations\\
 %3) a Gaussian prior  
