--- a/texFiles/4.3_comparison_merger.tex
+++ b/texFiles/4.3_comparison_merger.tex
@@ -1,27 +1,9 @@
 
+Estimates of the period of El Gordo is smaller than both Musketball and
+the Bullet Cluster due to the larger masses of its subclusters. 
+
 Talks about how El Gordo is more massive and collided at higher speed than
 both the Bullet and the Musketball, so El Gordo is probably a better probe of SIDM properties.
-%This estimated value has
-%several implications for the analysis of the mass estimation and our
-%knowledge of the physics underlying the creation of radio relic.   
-%
-%Compare with other literature???? 
-%address concerns from James' paper that talks about how the mass would
-%remain high as long as the viewing angle is $\le$ 65\degree ? 
-%
-% defy expectation 
-%brings up that the large projection angle is unexpected
-%merger axis has to be close to the sky for the radio relic to be observed 
-%From simulation, it has been shown that the size of radio relic can be
-%used to constrain with the mass ratio of the subclusters, with the more massive subcluster being further away from the larger relic. However, this is not the case for 
-%El Gordo. The more prominent relic is located further away from the less massive
-%SE cluster. This can be explained if the following holds: 
-%\begin{enumerate}
-%\item the less massive SE subcluster shows a higher redshift than the NW subcluster. This suggests that the SE radio relic could be moving away from us and
-%hence appears to be less bright than its NW counterpart\\ 
-%\item the extend to which (i) is true depends on the projection angle. With
-%$\alpha \sim 41.7\degree$, one can naively calculate that the observed relic
-%would be only $\cos(41.7 \text{ deg}) \sim .75 $ the size of the original relic. %\end{enumerate}
 
 With this new piece of evidence, we find that the absence of an
 X-ray shock feature from El Gordo, may not be due to the merger speed being
@@ -30,7 +12,7 @@ In particular, taking into account that the estimated projection angle of
 $\sim 41.7\degree$, we estimate the projected relative velocity to be 597
 \kilo \meter~\second$^{-1}$, which is consistent with the estimated
 line-of-sight velocity differences of $586 \pm  96~\kilo \meter
-~\second^{-1}$ in \citetalias{M11}. 
+~\second^{-1}$ in \citetalias{M12}. 
 
 Furthermore, the study from \cite{L13} Lindner et al. has come up
 with an estimation of the shock velocity of the radio relic of El Gordo as 
