--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -173,8 +173,8 @@ of the merger scenario.
 \section{BAYESIAN PRIORS USED FOR DAWSON'S MONTE CARLO SIMULATION}
 \input{app_a_MCMAC_stat_formalism}
 
-\section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
-\input{app_b_MCMC}
+%\section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
+%\input{app_b_MCMC}
 
 \section{PLOTS OF OUTPUTS OF THE MONTE CARLO SIMULATION}
 \input{app_c_result_plots}
