--- a/texFiles/output_table.tex
+++ b/texFiles/output_table.tex
@@ -1,5 +1,5 @@
 \begin{table*} 
-\begin{minipage}{180mm} 
+\begin{minipage}{170mm} 
 \caption{Table of the output PDF properties of the model variables and output variables from Monte Carlo simulation
 \label{tab:outputs}}
 \begin{tabularx}{\textwidth}{@{\extracolsep{\fill}}lccccccccc@{}}
@@ -9,15 +9,16 @@
 \cmidrule{4-6} \cmidrule{8-10} 
 Variables & Units && Location & 68$\%$ CI $^{\dagger}$ &95$\%$ CI && Location & 68$\%$ CI  & 95$\%$ CI \\ 
 \hline 
-$\alpha$ &(degree)&&23&11-34&3-39&&21&9-29&2-34\\
+$\alpha$ &(degree)&&21&10-30&3-34&&21&10-30&3-34\\
 $d_{proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
-$d_{max}$ &Mpc&&1.1&0.91-2&0.76-3.5&&0.93&0.81-1.2&0.76-1.9\\
-$d_{3D}$ &Mpc&&1&0.78-1.9&0.74-3.4&&0.8&0.76-0.87&0.74-0.91\\
-$TSC_0$&Gyr&&0.61&0.39-0.92&0.24-1.9&&0.46&0.36-0.6&0.26-0.69\\
-$TSC_1$&Gyr&&1&0.76-1.5&0.63-3.1&&0.92&0.67-1.2&0.59-2.1\\
-$T$&Gyr&&1.6&1.3-2.4&1.2-5&&1.4&1.2-1.6&1.2-2.3\\
-$v_{3D}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&600&280-1400&40-2600&&930&400-1800&80-3000\\
-$v_{3D}(t_{col})$ & \kilo \meter~\second$^{-1}$ &&2700&2400-3600&2100-4100&&2400&2200-2800&2100-3600\\
+$d_{max}$ &Mpc&&1.2&0.9-2.2&0.77-4.6&&0.93&0.81-1.2&0.75-1.9\\
+$d_{3D}$ &Mpc&&1&0.79-2.1&0.75-4.3&&0.8&0.76-0.88&0.74-0.91\\
+$TSC_0$&Gyr&&0.61&0.4-0.95&0.26-2.4&&0.46&0.3-0.55&0.21-0.64\\
+$TSC_1$&Gyr&&1&0.77-1.7&0.63-4.4&&0.91&0.69-1.3&0.59-2.3\\
+$T$&Gyr&&1.6&1.3-2.6&1.2-7.1&&1.4&1.2-1.6&1.2-2.4\\
+$v_{3D}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&580&260-1200&59-2400&&940&360-1800&62-2900\\
+$v_{rad}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&360&140-630&27-880&&310&110-590&8-840\\
+$v_{3D}(t_{col})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-4200&&2400&2200-2800&2100-3500\\
 \bottomrule
 \end{tabularx}\\
 \footnotesize{$\dagger$ CI stands for credible interval}\\
