bug fix for the alpha values in the table

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -88,8 +88,10 @@ index gradient and are identified as radio relic created from a merger.\par
 %\end{itemize}
 \begin{figure}
 	\includegraphics[width=\linewidth]{ElGordo.pdf}
-	\caption{Configuration of El Gordo (to decide which figure to use,
-	this one is from Lindner et al.) \label{fig:config}}
+	\caption{Configuration of El Gordo showing approximate overlaid of dark
+		matter distribution in blue, and X-ray luminosity in red. The cross
+		markers show the position of the northwest (NW) and southeast(SE) dark
+		matter density peaks, and the center of mass (CM) location respectively.   \label{fig:config}}
 \end{figure}
 El Gordo is one of small sample of galaxy clusters ($\sim 50$) that have
 been associated with a radio relic. (This paragraph needs a lot more
