--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -172,8 +172,9 @@ of the merger scenario.
 
 \section{BAYESIAN PRIORS USED FOR DAWSON'S MONTE CARLO SIMULATION}
 \input{app_a_MCMAC_stat_formalism}
+\label{app:priors}
 
-%\section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
+%\section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}
 %\input{app_b_MCMC}
 
 \section{PLOTS OF OUTPUTS OF THE MONTE CARLO SIMULATION}
