--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -15,8 +15,8 @@ addition to the default priors.
 	\caption{Marginalized PDFs of original inputs and the inputs after
 applying polarization prior and default priors. The inner and outer contour
 denote the 68\% and 95\% bias-corrected confidence levels respectively.
-Circular contours show that priors did not introduce even sampling of
-inputs. }
+Circular contours show that the application of priors did not introduce
+uneven sampling of inputs. }
 	\end{center}
 	\end{minipage}
 \end{figure*}
