--- a/texFiles/2.0_montecarlo_framework.tex
+++ b/texFiles/2.0_montecarlo_framework.tex
@@ -61,10 +61,10 @@ and computed over all $j$ realizations. Finally, we took the physical
 constraints on the dynamical variables into account by
 examining the resulting physical variables against the physical limits and
 excluding realizations that would produce impossible values. We refer to this
-process of excluding unphysical realizations by applying suitable priors. 
-Even though we denote the priors for one dimension at a time, 
-the correlations between different variables are taken into account
-properly due to how we throw away all the variables of problematic
+process of excluding unphysical realizations as applying priors. 
+Even though we denote the priors for one dimension at a time (See Appendix~\ref{app:priors}), 
+the correlations between different variables are properly taken into account
+ due to how we throw away all the variables of problematic
 realizations. 
 %To model projection effects, we randomly draw a projection
 %angle in each realization. We throw out realizations with unphysical
