--- a/texFiles/2.1_1_membership_redshift.tex
+++ b/texFiles/2.1_1_membership_redshift.tex
@@ -5,23 +5,27 @@
 
 % paragraphs needs to be reorganized 
 We adopt the identification of galaxy membership of El Gordo given by
-\citepalias{M12} with a total count of 89 galaxies.
+\citetalias{M12} with a total count of 89 galaxies.
 %The overall membership of the galaxies
 %of El Gordo was first determined using a shifting gapper method
 %\citep{Fadda96} after applying a rest frame cut of
 %4000~\kilo\meter~\second$^{-1}$ \citep{Sifon13}. This method gives a
 To further distinguish member galaxies of each subcluster, we adopt a
-redshift cut of $z < 0.886$, and a spatial cut approximately perpendicular
-to the 2D merger axis from \citetalias{M12} to determine that
-there are 51 members in the NW subclusters and 35 members in the SE subclusters (See Figure
-\ref{fig:membership}). 
-The spatial cut indicated by the green line was done after
-mapping the world coordinates to pixel coordinates to avoid anamorphic distortion. 
+redshift cut of $z < 0.886$, and a spatial cut along (01:03:22.0,
+-49:12:32.9) and (01:02:35.1, -49:18:09.8). The spatial cut is approximately perpendicular
+to the 2D merger axis and are consistent with the bimodal number density
+contours (See Figure~\ref{fig:membership}). We determined that
+there are 51 members in the NW subclusters and 35 members in the SE
+subclusters. 
+The spatial cut indicated by the black line was done after
+mapping the world coordinates to pixel coordinates to avoid anamorphic
+distortion.  
 
 %Compare and contrast the amount of bootstrapping and the reported
 %redshifts and velocity dispersion.
 After identifying members of each subcluster, we performed 10, 000 bootstrap realizations to estimate the biweight
-locations of the redshifts of the respective members in order to obtain the
+locations of the spectroscopic redshifts of the respective members in order
+to obtain the
 samples of the PDFs of the redshifts of each subcluster. 
 The spectroscopic redshift of the subclusters were
 determined to be 
@@ -30,39 +34,44 @@ $z_{\mathrm{NW}} = 0.86842 \pm 0.0011$ and
 $z_{\mathrm{SE}} = 0.87131 \pm 0.0012$, where the quoted numbers represent the
 biweight location and 1$\sigma$ biased corrected confidence level
 respectively \citep{Beers90}.  
-%These biweight location estimators are less susceptible to outliers than
-%the mean and standard deviations. 
 Both the estimated redshifts of the subclusters and the uncertainties are
 consistent with estimates given by \citealt{Sifon13}, and the fact that the
 member galaxies of El
 Gordo shows large velocity dispersion and has the largest velocity
 dispersion among all the ACT galaxy clusters as reported by
-\citetalias{M12}. These redshifts of the subclusters correspond to a
-radial velocity difference in the frame of the NW subcluster
-to be $476 \pm 242 $ km/s. We estimate the radial velocity differences of the
+\citetalias{M12}.
+
+We estimated the radial velocity differences of the
 subclusters by first calculating the velocity of each subcluster with
 respective to us, using  
 \begin{equation}
 	v_i = \left[ \frac{(1+z_i)^2 - 1 }{(1+z_i)^2 + 1 }\right]c
 \end{equation}
-where $c$ is the speed of light. And then the radial velocity was calculated
-by: 
+where $i=1, 2$ represents the two subclusters, and $c$ is the speed of
+light. The radial velocity was calculated by: 
 \begin{equation}
 	\Delta v_{rad}(t_{obs}) = \frac{|v_2 - v_1|}{1-\frac{v_1 v_2}{c^2}}
 \end{equation}
-This result is lower than the the quoted radial velocity differences of
+Due to the estimates of the subcluster redshifts are close to
+one another with overlapping confidence intervals, we obtained a low 
+radial velocity difference of the two subclusters to be $476 \pm 242 $ km /
+s. 
+This result is lower than the quoted radial velocity differences of
 $586$
 km/s reported by \citetalias{M12} from the approximation of $\Delta v_{rad}
 = c(z_1 - z_2) / (1 + z_1)$ in the frame of the NW subcluster. 
 
 
+
 \begin{figure}
 	\includegraphics[width = \linewidth]{confirmed_member_divide.png}
-	\caption{\label{fig:membership} The division of
-the member galaxies among the two subclusters of El Gordo by a spatial cut
-(green line). The color bar shows the color mapping of the spectroscopic
-redshift of the member galaxies, with the redder end indicating higher
-redshift.} 
+	\caption{\label{fig:membership} Points showing the locations of the
+	member galaxies and the division of the member galaxies among the two subclusters of El Gordo by a spatial cut
+(black line). The color of the points shows the corresponding spectroscopic
+redshift of the member galaxies (see color bar for matching of
+spectroscopic values), with the redder end indicating higher
+redshift. The background number density contours in green indicate a bimodal
+distribution.} 
 \end{figure}
 
 %We confirm the existence of the subclusters of El Gordo from the 2D spatial
