--- a/texFiles/output_table.tex
+++ b/texFiles/output_table.tex
@@ -9,7 +9,7 @@
 \cmidrule{4-6} \cmidrule{8-10} 
 Variables & Units && Location & 68$\%$ CI $^{\dagger}$ &95$\%$ CI && Location & 68$\%$ CI  & 95$\%$ CI \\ 
 \hline 
-$\alpha$ &(degree)&&21&10-30&3-34&&21&10-30&3-34\\
+$\alpha$ &(degree)&&43&19-69&6-80&&21&10-30&3-34\\
 $d_{proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
 $d_{max}$ &Mpc&&1.2&0.9-2.2&0.77-4.6&&0.93&0.81-1.2&0.75-1.9\\
 $d_{3D}$ &Mpc&&1&0.79-2.1&0.75-4.3&&0.8&0.76-0.88&0.74-0.91\\
@@ -21,6 +21,6 @@ $v_{rad}(t_{obs})$ & \kilo \meter~\second$^{-1}$ &&360&140-630&27-880&&310&110-5
 $v_{3D}(t_{col})$ & \kilo \meter~\second$^{-1}$ &&2800&2400-3700&2100-4200&&2400&2200-2800&2100-3500\\
 \bottomrule
 \end{tabularx}\\
-\footnotesize{$\dagger$ CI stands for bias-corrected confidence interval.}\\
+\footnotesize{$\dagger$ CI stands for credible interval}\\
 \end{minipage}
 \end{table*}
