updates to fig 6 and text

--- a/texFiles/2.1_1_membership_redshift.tex
+++ b/texFiles/2.1_1_membership_redshift.tex
@@ -35,7 +35,7 @@ $z_{\mathrm{SE}} = 0.87131 \pm 0.0012$, where the quoted numbers represent the
 biweight location and 1$\sigma$ biased corrected confidence level
 respectively \citep{Beers90}.  
 Both the estimated redshifts of the subclusters and the uncertainties are
-consistent with estimates given by \citealt{Sifon13}, and the fact that the
+consistent with estimates of $z=0.8701 \pm 0.0009$ for El Gordo given by \citealt{Sifon13}, and the fact that the
 member galaxies of El
 Gordo shows large velocity dispersion and has the largest velocity
 dispersion among all the ACT galaxy clusters as reported by
