--- a/texFiles/2.2_0_monte_carlo_outputs.tex
+++ b/texFiles/2.2_0_monte_carlo_outputs.tex
@@ -18,13 +18,13 @@ We describe how we make use of properties of the radio relic to evalute
 which scenario is more likely in
 section \ref{sec: positionprior}. 
  
-The simulation also output estimates of variables that characterize
+The simulation also output estimates of variables that describe
 the dynamics and the characteristic distances of the merger. The 3D velocities, both at the time of the
 collision ($v_{3D}(t_{col})$) and at the time of observation
-($v_{3D}(t_{obs})$) are provided. The three characteristic
-distances include the maximum 3D separation ($d_{max}$),
+($v_{3D}(t_{obs})$) are provided. The characteristic
+distances included in the outputs are the maximum 3D separation ($d_{max}$),
 which is the distance between the position of collision to
-the apoapsis; the projected separation $d_proj$ and the three
+the apoapsis; the projected separation $d_{proj}$ and the three
 dimensional separation of the subclusters at observation. 
 %(See Table \ref{tab:outputs} for all the outputs).
 
