--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -49,7 +49,4 @@ pressure wave, some dissipative processes may have slowed down the shock
 wave slightly as it propagated. By making use of a
 range of $\beta$ values, we examine how the rate of slow down would
 give a different lower bound of the projected separation of the relic.   
-The southeast (SE) and the east (E) relics were not considered in this
-calculation since L13 reported southeast	``relic'' is created due to
-compact radio source and the relationship between the E relic and the
-merger is less clear.\par      
+\par      
