--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -14,7 +14,7 @@ addition to the default priors.
 	\includegraphics[width=0.65\linewidth]{TwoMnWBSG_inputsVsinput.png}
 	\caption{Marginalized PDFs of original inputs and the inputs after
 applying polarization prior and default priors. The inner and outer contour
-denote the 68\% and 95\% bias-corrected confidence levels respectively.
+denote the 68\% and 95\% bias-corrected credible regions respectively.
 Circular contours show that the application of priors did not introduce
 uneven sampling of inputs. }
 	\end{center}
