--- a/texFiles/2.3_prior.tex
+++ b/texFiles/2.3_prior.tex
@@ -1,29 +1,10 @@
-The strength of the Monte Carlo simulation by \citetalias{D13} is its ability
+One of the biggest strengths of the Monte Carlo simulation by \citetalias{D13} is its ability
 to detect and rule out extreme input values that would result in
 unphysical realizations via the application of prior probability. 
-Our default Monte Carlo priors are described in D13 and in Appendix
-\ref{app: results}. We also examine the effects of applying 
-two priors derived based on the position and the integrated polarization
-fraction of the radio relic of El Gordo respectively. 
-We considered other properties of the radio relic to be used as prior
-information, such as the physical location. Due to large uncertainty in the
-projection angle that affects the prior information derived from the prior
-information, we have not included the corresponding numerical results.
-\par 
-%(Not sure if the following fits best here but it is definitely an intro to
-%the priors) 
-El Gordo shows radio relics on the periphery of both subclusters
-\citepalias{M12}. The
-radio relic  of El Gordo was first mentioned in the Sydney University
-Molonglo Sky Survey (SUMSS) data in low resolution at 843 MHz
-\citep{Mauch03} as shown in M12. The higher resolution radio observation
-conducted by \cite{L13} at 610 \mega Hz and 2.1 \giga Hz confirms that the identity of the radio relic
-after removing effects of radio point sources. 
-Three main sources of radio relic were identified, including the NW, SE and the
-E relic. The NW radio relic possesses the most extended geometry among all
-the identified relic source. We do not refer to the The SE nor the E radio
-relic in our calculation since we do not have an estimation of the shock
-speed of the SE relic nor the E relic from \citet{L13} for comparison.    
+Our default priors are described in D13 and we include them in Appendix
+\ref{app: results} for the convenience of the readers. 
+In addition, we have come up with a prior on the projection angle $\alpha$
+based on the polarization fraction of the radio relic.
 %Radio relics have been suggested to be able to constrain the mass ratios,
 %the projection and the merger configuration \citep{vanWeeren10}. 
 
