changed range for figure 4 to show when the outgoing scenario would be more likely

--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -1,7 +1,10 @@
+We can relate the polarization fraction of the radio relic to the
+projection angle by examining the
+generating mechanism of the radio relic.
 The observed radio relic is due to synchrotron emission of free electrons in a
 magnetic field. If the magnetic field is uniform, the observed
 polarization fraction of the synchrotron emission of the electrons depends on the
-viewing angle with respect to the alignment of the magnetic field. 
+viewing angle (or equivalently the projection angle) with respect to the alignment of the magnetic field. 
 Synchrotron emission from electrons inside unorganized magnetic field are
 randomly polarized. The high reported integrated polarization fraction from
 \citet{L13} can be explained by a highly aligned magnetic field,
@@ -27,7 +30,7 @@ maximum observable integrated polarization fraction.
 		indicating the uncertainty \citep{L13}.\label{fig:Ensslin_fig}}
 \end{figure}
 This assumption is based on the class of models given by \cite{E98}(See
-Figure \ref{fig:Ensslin_fig}). In particular, we refer to a model from \cite{E98} that would give the most
+Figure~\ref{fig:Ensslin_fig}). In particular, we refer to a model from \cite{E98} that would give the most
 conservative estimate on the upper bound of $\alpha$:
 \begin{align}
 \alpha &= 90 \degree -
@@ -65,8 +68,8 @@ simulations of radio relics from \cite{S13} show varying polarization
 fraction across and along the relic assuming $\alpha = 0$, resulting in a
 lower integrated polarization fraction. For example, it is possible to see a edge-on radio relic ($\alpha = 0$) with integrated polarization fraction of 33\%. 
 Furthermore, \cite{S13} shows that after convolving the
-simulated polarization signal with a Gaussian kernel of 4\arcmin~to match
-the observed resolution, the polarization fraction drops to between 30\% to
+simulated polarization signal with a Gaussian kernel of 4\arcmin~to
+illustrate effects of non-zero beam size, the polarization fraction drops to between 30\% to
 65\% even when $\alpha = 0$. 
 Other uncertainties come from the fact that the inferred spectral indices
 differ between the two observed frequencies and vary between the three
