--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -1,16 +1,15 @@
-We give constraints on the likelihood of the
-outgoing and returning merger scenarios by comparing the observed and the
-simulated position of the NW radio relic.
-This method depends on the estimate of the
-time evolution of the relic velocity, which gives the upper and lower
-bounds on the possible position of the relic for each scenario. The
-velocity depends on a number of physical quantities, including the
-local gravitational potential, matter density, temperature, pressure among
-others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
-of the shock velocity requires detailed numerical simulation similar to
-\citet{Springel2007}, \citet{Vazza11}, \citet{Kang2007}, etc.  
+One of the biggest question involving the merger is if El Gordo was
+observed to be in a returning or outgoing phase.
+We perform a qualitative comparison of the observed and the
+simulated position of the NW radio relic in each scenario.
+%This method depends on the time evolution of the relic velocity, which gives the upper and lower bounds on the possible position of the relic for each scenario. 
+%%The velocity depends on a number of physical quantities, including the
+%local gravitational potential, matter density, temperature, pressure among
+%others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
+%of the shock velocity requires detailed numerical simulation similar to
+%\citet{Springel2007}, \citet{Vazza11}, \citet{Kang2007}, etc.  
 We considered different possibilities of the time evolution of the shock
-velocity due to lack of knowledge of the evolution of the shock velocities. We drew physical insight from the simulations of the merger shock of the
+velocity due to lack of knowledge of the details of the evolution. We drew physical insight from the simulations of the merger shock of the
 staged numerical simulation of the Bullet cluster from \citet{Springel2007}
 and the cosmological simulation from \citet{Paul2011b}. Right after
 the collision of the subclusters, \citet{Springel2007} shows that the shock speed is
@@ -22,8 +21,7 @@ speed was $\sim1.5$ times the relative collisional speed of the subcluster
 shortly after the collision and the shock speed decreases only
 slightly as it propagates away from the center of mass. \par  
 We approximated the upper and lower bounds of the NW relic speed with the
-simulated speeds of the NW subcluster.  We simplified the calculation by
-working in the center of mass frame where the shock speed is expected to
+simulated speeds of the NW subcluster.  We worked in the center of mass frame where the shock speed is expected to
 drop slightly with time. 
 The projected separation of the shock is approximated as:
 \begin{equation}
