--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -1,21 +1,13 @@
 \label{sec: sensitivityTests}
-
-\subsection{Effects of centroid uncertainty}
-
-
-\subsection{Effects of polarization priors}
 We performed tests of how each of the output variables vary according to the
 choice of the cutoff of the polarization prior.
 We found that in the most extreme cases, shifting of the cutoff values by
 $2.5\degree$ ($\sim 6.4\%$ of the choosen cut off), the location of the output
 variable, $v_{3D}(t_{obs})$, is changed by $\%$. The CI of BLAH variable is
 the most sensitive to the prior and changed by $X\%$ from CI_LOWER, CI_UPPER to
-CI_LOWER to CI_UPPER for the $68\%$ credible interval. 
+CI_LOWER to CI_UPPER for the $68\%$ confidence interval. 
 
-The polarization prior cuts off large projection angle, thus it would
-favor lower collisional velocities.
-
-The overall effect of varying the cutoff value does not favor the
+We examine The overall effect of varying the cutoff value does not favor the
 returning scenario significantly more. 
 
 %Should also talk about angle uncertainty between choosing different models
