--- a/texFiles/2.2_0_monte_carlo_outputs.tex
+++ b/texFiles/2.2_0_monte_carlo_outputs.tex
@@ -19,13 +19,13 @@ which scenario is more likely in
 section \ref{sec: positionprior}. 
  
 The simulation also output estimates of variables that describe
-the dynamics and the characteristic distances of the merger. The 3D velocities, both at the time of the
+the dynamics and the characteristic distances of the merger. The relative
+3D velocities of the subclusters, both at the time of the
 collision ($v_{3D}(t_{col})$) and at the time of observation
 ($v_{3D}(t_{obs})$) are provided. The characteristic
 distances included in the outputs are the maximum 3D separation ($d_{max}$),
 which is the distance between the position of collision to
-the apoapsis; the projected separation $d_{proj}$ and the three
-dimensional separation of the subclusters at observation. 
+the apoapsis; the projected separation $d_{proj}$ and the 3D separation of the subclusters at observation. 
 %(See Table \ref{tab:outputs} for all the outputs).
 
 %Here we present results based on:\\  %1) a flat radio prior\\
