--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -12,10 +12,10 @@ addition to the default priors.
 	\begin{minipage}{180mm}
 	\begin{center}
 	\includegraphics[width=0.65\linewidth]{TwoMnWBSG_inputsVsinput.png}
-	\caption{Marginalized PDFs of original inputs and the inputs after
-applying polarization prior and default priors. The inner and outer contour
-denote the 68\% and 95\% bias-corrected credible regions respectively.
-Circular contours show that the application of priors did not introduce
+	\caption{Marginalized PDFs of original inputs (vertical axis) and the inputs after
+applying polarization prior and default priors (horizontal axis). The inner and outer contour
+denote the central 68\% and 95\% credible regions respectively.
+The circular contours show that the application of priors did not introduce
 uneven sampling of inputs. }
 	\end{center}
 	\end{minipage}
