--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -1,21 +1,22 @@
 \label{sec: sensitivityTests}
 We performed tests of how each of the output variables vary according to the
-choice of the cutoff of the polarization prior.
-We found that in the most extreme cases, shifting of the cutoff values by
-$2.5\degree$ ($\sim 6.4\%$ of the choosen cut off), the location of the output
-variable, $v_{3D}(t_{obs})$, is changed by $\%$. The CI of BLAH variable is
-the most sensitive to the prior and changed by $X\%$ from CI_LOWER, CI_UPPER to
-CI_LOWER to CI_UPPER for the $68\%$ confidence interval. 
-
-We examine The overall effect of varying the cutoff value does not favor the
-returning scenario significantly more. 
+choice of the cutoff of the polarization prior between
+$\alpha_{\text{cutoff}} =
+29 \degree$ to $49\degree$ instead of $35 \degree$.  
+We found that in the most extreme case, choosing the cutoff values as $29
+\degree$ ($-6 \degree$), the location of the $v_{3D}(t_{obs})$, is
+increased by $ 16 \%$. While the upper $95\%$ CI of $d_{max}$ is
+the most sensitive to the prior and it changes by
+$\sim 20 \%$ when $\alpha_{\text{cutoff}} = 49 \degree$. 
+This shows that the exact choice of the cut off value for $\alpha$ does
+not affect our estimates significantly.
 
 %Should also talk about angle uncertainty between choosing different models
-%and how the sensitivity test show the percentage tests for those. 
-Even if we made use of the least conservative model, assuming weak field
-and a radio spectral index of 1.5 from \cite{E98}, which
-corresponds to a cutoff of $\alpha = 33\degree$, the output variable would
-be changed by X\% at most. 
+%%and how the sensitivity test show the percentage tests for those. 
+%Even if we made use of the least conservative model, assuming weak field
+%and a radio spectral index of 1.5 from \cite{E98}, which
+%corresponds to a cutoff of $\alpha = 33\degree$, the output variable would
+%be changed by X\% at most. 
 
 %how does this affect the conclusion of our merger scenario? 
 % talk about the sensitivity tests for TSM_1 and TSM_0
